# xllm-service

tests/xllm_service/: CMakeLists.txt
tests/xllm_service/chat_template/: CMakeLists.txt  message_projection_test.cpp
tests/xllm_service/common/: CMakeLists.txt  anthropic_tracer_test.cpp  types_test.cpp
tests/xllm_service/http_service/: CMakeLists.txt  anthropic_adapter_test.cpp  anthropic_stream_encoder_test.cpp
tests/xllm_service/scheduler/: CMakeLists.txt  xllm_chat_parse_bridge_test.cpp
xllm_service/: master.cpp
xllm_service/chat_template/: CMakeLists.txt  jinja_chat_template.cpp  jinja_chat_template.h  jinja_chat_template_test.cpp  message_projection.cpp  message_projection.h
xllm_service/common/: CMakeLists.txt  anthropic_tracer.cpp  anthropic_tracer.h  call_data.h  global_gflags.cpp  global_gflags.h  options.h  types.h
xllm_service/examples/vllm_backend/: README.md  compare.sh  register_vllm.sh  show.sh  start_demo.sh  stop_demo.sh
xllm_service/http_service/: CMakeLists.txt  anthropic_adapter.cpp  anthropic_adapter.h  anthropic_stream_encoder.cpp  anthropic_stream_encoder.h  service.cpp
xllm_service/proto/: xllm_rpc_service.proto
xllm_service/scheduler/: CMakeLists.txt  response_handler.cpp  response_handler.h  scheduler.cpp  xllm_chat_parse_bridge.cpp  xllm_chat_parse_bridge.h
xllm_service/scheduler/managers/: instance_mgr.cpp  instance_mgr.h
