include(cc_binary)
include(cc_library)

cc_library(
  NAME
    chat_json_parser
  HDRS
    chat_json_parser.h
  SRCS
    chat_json_parser.cpp
  DEPS
    glog::glog
    nlohmann_json::nlohmann_json
)

cc_library(
  NAME
    anthropic_adapter
  HDRS
    anthropic_adapter.h
  SRCS
    anthropic_adapter.cpp
    ${CMAKE_SOURCE_DIR}/third_party/xllm/xllm/api_service/chat_json_parser.cpp
    ${CMAKE_SOURCE_DIR}/third_party/xllm/xllm/api_service/anthropic_stream_utils.cpp
  INCLUDES
    ${CMAKE_SOURCE_DIR}/third_party/xllm
    ${CMAKE_SOURCE_DIR}/third_party/xllm/xllm
    ${CMAKE_SOURCE_DIR}/third_party/xllm/xllm/core
  DEPS
    :chat_template
    :message_projection
    :common
    glog::glog
    nlohmann_json::nlohmann_json
    proto_xllm
)
target_link_libraries(anthropic_adapter PUBLIC brpc-static leveldb::leveldb ZLIB::ZLIB protobuf::libprotobuf OpenSSL::SSL OpenSSL::Crypto)

cc_library(
  NAME
    anthropic_stream_encoder
  HDRS
    anthropic_stream_encoder.h
  SRCS
    anthropic_stream_encoder.cpp
  INCLUDES
    ${CMAKE_SOURCE_DIR}/third_party/xllm
    ${CMAKE_SOURCE_DIR}/third_party/xllm/xllm
    ${CMAKE_SOURCE_DIR}/third_party/xllm/xllm/core
  DEPS
    :anthropic_adapter
    :common
    glog::glog
    nlohmann_json::nlohmann_json
    proto_xllm
)
target_link_libraries(anthropic_stream_encoder PUBLIC brpc-static leveldb::leveldb ZLIB::ZLIB protobuf::libprotobuf OpenSSL::SSL OpenSSL::Crypto)

cc_library(
  NAME
  xllm_http_service
  HDRS
    service.h
    request_tracer.h
  SRCS
    service.cpp 
    request_tracer.cpp
  DEPS
    :anthropic_adapter
    :chat_json_parser
    :common
    :request
    :scheduler
    absl::random_random
    absl::synchronization
    glog::glog
    nlohmann_json::nlohmann_json
    proto::proto_http_service
    proto_xllm
)
target_link_libraries(xllm_http_service PRIVATE brpc-static leveldb::leveldb ZLIB::ZLIB protobuf::libprotobuf OpenSSL::SSL OpenSSL::Crypto)

cc_binary(
  NAME 
    xllm_http_serving
  SRCS 
    main.cpp
  DEPS
    :xllm_http_service
    gflags::gflags
)
